EV-137 Updates to be ready to go to test.

--- a/DBI.Web.EMS/Resources/StyleSheets/main.css
+++ b/DBI.Web.EMS/Resources/StyleSheets/main.css
@@ -52,3 +52,8 @@
 .x-grid-dirty-cell {
     background: none;
 }
+
+.allowBlank-field {
+            background-color: #EFF7FF !important;
+            background-image: none;
+        }
