EV-73 Created State crossing list report. Edited invoice reports to follow same structure as state list report.

--- a/DBI.Web.EMS/Views/Modules/CrossingMaintenance/Reports/SupplementalInvoiceReport.rdlc
+++ b/DBI.Web.EMS/Views/Modules/CrossingMaintenance/Reports/SupplementalInvoiceReport.rdlc
@@ -932,6 +932,7 @@
                 </TablixMember>
               </TablixMembers>
               <KeepWithGroup>After</KeepWithGroup>
+              <RepeatOnNewPage>true</RepeatOnNewPage>
             </TablixMember>
             <TablixMember>
               <Group Name="SEGMENT1">
