--- a/DBI.Web.EMS/Views/Modules/CrossingMaintenance/Reports/MaintenanceInvoiceReport.rdlc
+++ b/DBI.Web.EMS/Views/Modules/CrossingMaintenance/Reports/MaintenanceInvoiceReport.rdlc
@@ -706,6 +706,7 @@
                 </TablixMember>
               </TablixMembers>
               <KeepWithGroup>After</KeepWithGroup>
+              <RepeatOnNewPage>true</RepeatOnNewPage>
             </TablixMember>
             <TablixMember>
               <Group Name="SEGMENT1">
