--- a/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgSum.rdlc
+++ b/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgSum.rdlc
@@ -3780,7 +3780,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!pyearID.Value</Value>
+                <Value>=Parameters!paramYear.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -3812,7 +3812,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!pbudVer.Value</Value>
+                <Value>=Parameters!paramVer.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -3846,7 +3846,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!porgName.Value</Value>
+                <Value>=Parameters!paramOrgName.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -3977,7 +3977,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!poh.Value</Value>
+                <Value>=Parameters!paramOH.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -4338,7 +4338,7 @@
     </DataSet>
   </DataSets>
   <ReportParameters>
-    <ReportParameter Name="pyearID">
+    <ReportParameter Name="paramYear">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
@@ -4349,7 +4349,7 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="porgName">
+    <ReportParameter Name="paramOrgName">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
@@ -4360,7 +4360,7 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="pbudVer">
+    <ReportParameter Name="paramVer">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
@@ -4371,8 +4371,8 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="poh">
-      <DataType>Integer</DataType>
+    <ReportParameter Name="paramOH">
+      <DataType>Float</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
         <Values>
