--- a/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgComm.rdlc
+++ b/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgComm.rdlc
@@ -942,7 +942,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!pyearID.Value</Value>
+                <Value>=Parameters!paramYear.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -974,7 +974,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!pbudVer.Value</Value>
+                <Value>=Parameters!paramVer.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -1008,7 +1008,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!porgName.Value</Value>
+                <Value>=Parameters!paramOrgName.Value</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>7pt</FontSize>
@@ -1353,7 +1353,7 @@
     </DataSet>
   </DataSets>
   <ReportParameters>
-    <ReportParameter Name="pyearID">
+    <ReportParameter Name="paramYear">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
@@ -1364,7 +1364,7 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="porgName">
+    <ReportParameter Name="paramOrgName">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
@@ -1375,7 +1375,7 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="pbudVer">
+    <ReportParameter Name="paramVer">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <DefaultValue>
