--- a/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgSum.rdlc
+++ b/DBI.Web.EMS/Views/Modules/BudgetBidding/Reports/umRepOrgSum.rdlc
@@ -4127,7 +4127,7 @@
         </Style>
       </Image>
     </ReportItems>
-    <Height>3.45361in</Height>
+    <Height>4in</Height>
     <Style>
       <Border>
         <Style>None</Style>
@@ -4163,6 +4163,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox3</rd:DefaultName>
+          <Top>0in</Top>
           <Left>0.17583in</Left>
           <Height>0.25in</Height>
           <Width>2.38542in</Width>
@@ -4196,6 +4197,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>TotalPages</rd:DefaultName>
+          <Top>0in</Top>
           <Left>7.35293in</Left>
           <Height>0.25in</Height>
           <Width>2.38542in</Width>
